<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/layoutModoJuego"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="?android:attr/colorBackgroundFloating">

    <CheckBox
        android:id="@+id/checkJugadorVsJugador"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkJugadorVsJugador"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="18sp" />

    <CheckBox
        android:id="@+id/checkJugadorVsMaquina"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkJugadorVsMaquina"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="18sp"
        android:layout_marginTop="8dp" />

    <Button
        android:id="@+id/btnConfirmarModo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnConfirmarModo"
        android:layout_marginTop="16dp"
        android:backgroundTint="?android:attr/colorAccent"
        android:textColor="?android:attr/textColorPrimaryInverse"
        android:textStyle="bold" />
</LinearLayout>
