<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/degradado"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp"
    android:weightSum="1">

    <!-- Contador de texto centrado -->
    <TextView
        android:id="@+id/valorContador"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.3"
        android:gravity="center"
        android:text="0"
        android:textAlignment="center"
        android:textSize="100sp" />

    <!-- Contenedor horizontal para los botones de sumar y restar -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/sumar"
            style="@style/boton2"
            android:layout_marginEnd="16dp"
            android:layout_weight="1"
            android:onClick="sumar"
            android:text="@string/sumar"
            android:textSize="40sp" />

        <Button
            android:id="@+id/restar"
            style="@style/boton2"
            android:layout_weight="1"
            android:onClick="restar"
            android:text="@string/restar" />
    </LinearLayout>

    <!-- Botón de reiniciar -->
    <Button
        android:id="@+id/reseteo"
        style="@style/boton"
        android:onClick="reseteo"
        android:text="@string/reseteo" />

    <!-- Campo de texto de entrada -->
    <EditText
        android:id="@+id/textDefault"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.15"
        android:hint="25"
        android:inputType="number"
        android:padding="12dp"
        android:textAlignment="center" />

    <!-- CheckBox -->
    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.15"
        android:text="@string/checkBox" />
</LinearLayout>
